--- a/src/main/resources/logger.properties
+++ b/src/main/resources/logger.properties
@@ -8,6 +8,6 @@ java.util.logging.FileHandler.formatter = java.util.logging.SimpleFormatter
 java.util.logging.FileHandler.level = INFO
 
 # Console Logging
-java.util.logging.ConsoleHandler.level = FINER
+java.util.logging.ConsoleHandler.level = INFO
 
 java.util.logging.SimpleFormatter.format = %1$tY-%1$tm-%1$td %1$tH:%1$tM:%1$tS %4$s %5$s %6$s %n
